--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,20 @@
-title: Hello, world! I'm David Freeman
+title: Guilherme Oliveira
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "https://gueepo.me" # the base hostname & protocol for your site, e.g. http://example.com
-site-twitter: #if your site has a twitter account, enter it here
+baseurl: "/blog"
+url: "https://gueepo.me"
 
 # Author Settings
-author: David Freeman # add your name
+author: Guilherme Oliveira # add your name
 author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-twitter: # add your Twitter handle
-facebook: # add your Facebook handle
-github: artemsheludko # add your Github handle
-linkedin: # add your Linkedin handle
-email: # add your Email address
-
-# Disqus
-discus-identifier: mr-brown # add your discus identifier
-
-# Tracker
-analytics: # Google Analytics
+about-author: Computer Science Student, working with Automated Tests. Hobbyist Game Developer.
+twitter: guilhermepo2
+github: guilhermepo2
+linkedin: guilhermepo2
+email: guilherme.061@gmail.com
 
 # Build Settings
 markdown: kramdown
