simple ci for cpp part 1

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "https://gueepo.me"
 
 # Author Settings
 author: Guilherme Oliveira # add your name
-author-img: david-freeman.jpg # add your photo
+author-img: me.jpg # add your photo
 about-author: Computer Science Student, working with Automated Tests. Hobbyist Game Developer.
 twitter: guilhermepo2
 github: guilhermepo2
