--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,15 @@
 title: Guilherme Oliveira
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Guilherme Oliveira's Blog, here is the place I talk about a bunch of things, technology,
+  games, game design, gaming, random stuff, whatever, welcome!
 permalink: ':title/'
 baseurl: "/blog"
 url: "https://gueepo.me"
 
 # Author Settings
 author: Guilherme Oliveira # add your name
-author-img: me.jpg # add your photo
-about-author: Computer Science Student, working with Automated Tests. Hobbyist Game Developer.
+author-img: portrait.png # add your photo
+about-author: Computer Science Ungraduate. Gameplay Programmer.
 twitter: guilhermepo2
 github: guilhermepo2
 linkedin: guilhermepo2
