changing portrait img

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ site-twitter: guilhermepo2 #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Guilherme Oliveira
-author-img: portrait.png
-about-author: Gameplay Programmer. # add description
+author-img: portrait.jpg
+about-author: Gameplay Programmer # add description
 social-twitter: guilhermepo2 # add your Twitter handle
 social-github: guilhermepo2 # add your Github handle
 social-linkedin: guilhermepo2 # add your Linkedin handle
