--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Guilherme Oliveira
+title: Guilherme de Oliveira
 description: > # this means to ignore newlines until "baseurl:"
   Guilherme Oliveira's Blog, here is where I talk about a bunch of things related to technology, games, game design, gaming, random stuff, whatever, welcome!
 permalink: ':title/'
@@ -7,7 +7,7 @@ url: "http://gueepo.me" # the base hostname & protocol for your site, e.g. http:
 site-twitter: guilhermepo2 #if your site has a twitter account, enter it here
 
 # Author Settings
-author: Guilherme Oliveira
+author: Guilherme de Oliveira
 author-img: portrait.jpg
 about-author: Gameplay Programmer # add description
 social-twitter: guilhermepo2 # add your Twitter handle
