--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Guilherme de Oliveira
 description: > # this means to ignore newlines until "baseurl:"
-  Guilherme Oliveira's Blog, here is where I talk about a bunch of things related to technology, games, game design, gaming, random stuff, whatever, welcome!
+  Guilherme de Oliveira's Blog, here is where I talk about a bunch of things related to technology, games, game design, gaming, random stuff, whatever, welcome!
 permalink: ':title/'
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "http://gueepo.me" # the base hostname & protocol for your site, e.g. http://example.com
